# IP

./: .gitignore  .ycm_extra_conf.py  README.md
apps/: .GridTest.cpp.swp  GridTest.cpp  hello.cpp
cmake/: CMakeLists.txt
include/: Box.hpp  BufferedFile.hpp  DataFileReader.hpp  GlobalCommon.hpp  Grid.hpp  Grid.hpp~  SpatialObject.hpp  SpatialQuery.hpp
src/: .Grid.cpp.swp  Box.cpp  DataFileReader.cpp  Grid.cpp  Segment.cpp  SpatialObject.cpp  SpatialQuery.cpp  Timer.cpp  Vertex.cpp
test/: getBestDim.py  plotVaryDim.py
test/expData/: grid120.normal2000K20K.callgrind.out  grid180.normal2000K20K.callgrind.out  grid20.normal2000K20K.callgrind.out
