CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(IP)

SET(MYLIB "IP")
OPTION(MAKE_EXECUTABLES "Make the executables." ON)

############## SETTING DIRECTORY PATHS #################
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../bin/)
SET(LIBRARY_OUTPUT_PATH    ${CMAKE_SOURCE_DIR}/../lib/)
SET(SRC_DIR ${CMAKE_SOURCE_DIR}/../src/)
SET(APP_DIR ${CMAKE_SOURCE_DIR}/../apps/)
SET(INC_DIR ${CMAKE_SOURCE_DIR}/../include/)
FILE(GLOB SRC_FILES  ${SRC_DIR}/*.cpp)
FILE(GLOB MAIN_FILES ${APP_DIR}*.cpp)

find_package(Boost 1.4 COMPONENTS filesystem thread system program_options REQUIRED)

INCLUDE_DIRECTORIES (
  ${CMAKE_SOURCE_DIR}/../include/
  ${Boost_INCLUDE_DIRS}/
)

############## COMPILE #################
ADD_DEFINITIONS("-std=c++11 -O3 -g -Wall -DPROFILING -DDEBUG -DFATAL -DPROGRESS ")
ADD_LIBRARY(${MYLIB} STATIC ${SRC_FILES})

IF (MAKE_EXECUTABLES)
	FOREACH(APPNAME ${MAIN_FILES})
    		GET_FILENAME_COMPONENT(BASENAME ${APPNAME} NAME_WE)
    		ADD_EXECUTABLE(${BASENAME} ${APPNAME})
    		TARGET_LINK_LIBRARIES(${BASENAME} ${MYLIB} ${Boost_LIBRARIES})
	ENDFOREACH(APPNAME ${MAIN_FILES})
ENDIF (MAKE_EXECUTABLES)
